--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,21 @@
 
 <body>
 
-  <header id="head"></header>
+ <header id="head">
+  <nav class="menu-items" >
+   <div class="menu-item" onclick="location.replace('/lista-requisicoes.html')"><img src="./assets/imagens/menuPrincipal/requisicao-lista.png" alt="">Requisições</div>
+   <div class="menu-item" onclick="()=> null"><img src="" alt="">Pedidos</div>
+   <div class="menu-item" onclick="()=> null"><img src="" alt="">Unidades</div>
+   <div class="menu-item" onclick="()=> null"><img src="" alt="">Contas Contabéis</div>
+  </nav>
+ </header>
 
   <main id="main-conteiner"></main>
 
   <script type="module" src="index.js"></script>
+  <script>
+ </script>
+
 
 </body>
 </html>
