--- a/public/lista-requisicoes.html
+++ b/public/lista-requisicoes.html
@@ -13,7 +13,7 @@
 
  <header id="head">
   <nav class="menu-items" >
-   <div class="menu-item" onclick="()=> null"><img src="./assets/imagens/menuPrincipal/requisicao-lista.png" alt="">Requisições</div>
+   <div class="menu-item" onclick="location.replace('/lista-requisicoes.html')"><img src="./assets/imagens/menuPrincipal/requisicao-lista.png" alt="">Requisições</div>
    <div class="menu-item" onclick="()=> null"><img src="" alt="">Pedidos</div>
    <div class="menu-item" onclick="()=> null"><img src="" alt="">Unidades</div>
    <div class="menu-item" onclick="()=> null"><img src="" alt="">Contas Contabéis</div>
