--- a/public/requisicao.html
+++ b/public/requisicao.html
@@ -39,19 +39,19 @@
      </div>
      <div class="data-box">
       <div class="data-titulo">Envio da requisição</div>
-      <input type="date" id="data-abertura-input" class="data-input" name="dt_envio_req" />
+      <input type="date" id="data-envio-input" class="data-input" name="dt_envio_req" />
      </div>
      <div class="data-box">
       <div class="data-titulo">Retorno da cotação</div>
-      <input type="date" id="data-abertura-input" class="data-input" name="dt_retorno_cotacao" />
+      <input type="date" id="data-retorno-input" class="data-input" name="dt_retorno_cotacao" />
      </div>
      <div class="data-box">
       <div class="data-titulo">Aprovação gerência</div>
-      <input type="date" id="data-abertura-input" class="data-input" name="dt_aprovacao_gerencia" />
+      <input type="date" id="data-aprovacao-input" class="data-input" name="dt_aprovacao_gerencia" />
      </div>
      <div class="data-box">
       <div class="data-titulo">Entrega</div>
-      <input type="date" id="data-abertura-input" class="data-input" name="dt_entrega" />
+      <input type="date" id="data-entrega-input" class="data-input" name="dt_entrega" />
      </div>
     </div>
    </section>
