--- a/public/lista-requisicoes.html
+++ b/public/lista-requisicoes.html
@@ -2,38 +2,40 @@
 <html lang="pt-BR">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gerenciador de Arquivos</title>
-  <link rel="stylesheet" href="./assets/css/main.css">
-  <link rel="stylesheet" href="./assets/css/lista-requisicoes.css">
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Gerenciador de Arquivos</title>
+ <link rel="stylesheet" href="./assets/css/main.css">
+ <link rel="stylesheet" href="./assets/css/lista-requisicoes.css">
 </head>
 
 <body>
 
  <header id="head">
-  <nav class="menu-items" >
-   <div class="menu-item" onclick="location.replace('/lista-requisicoes.html')"><img src="./assets/imagens/menuPrincipal/requisicao-lista.png" alt="">Requisições</div>
+  <nav class="menu-items">
+   <div class="menu-item" onclick="location.replace('/lista-requisicoes.html')"><img
+     src="./assets/imagens/menuPrincipal/requisicao-lista.png" alt="">Requisições</div>
    <div class="menu-item" onclick="()=> null"><img src="" alt="">Pedidos</div>
    <div class="menu-item" onclick="()=> null"><img src="" alt="">Unidades</div>
    <div class="menu-item" onclick="()=> null"><img src="" alt="">Contas Contabéis</div>
   </nav>
  </header>
 
-  <main id="main-conteiner">
+ <main id="main-conteiner">
 
-   <div id="tabela">
-    <div id="cabecalho">
-     <div class="cabecalho-item item-requisicao">REQUISIÇÃO</div>
-     <div class="cabecalho-item item-centro-custo">CENTRO DE CUSTO</div>
-     <div class="cabecalho-item item-justificativa">JUSTIFICATIVA</div>
-    </div>
-    <div id="items">
-    </div>
+  <div id="tabela">
+   <div id="cabecalho">
+    <div class="cabecalho-item item-requisicao">REQUISIÇÃO</div>
+    <div class="cabecalho-item item-centro-custo">CENTRO DE CUSTO</div>
+    <div class="cabecalho-item item-justificativa">JUSTIFICATIVA</div>
    </div>
+   <div id="items">
+   </div>
+  </div>
 
-  </main>
+ </main>
 
-  <script type="module" src="index.js"></script>
+ <script type="module" src="index.js"></script>
 </body>
+
 </html>
