--- a/public/requisicao.html
+++ b/public/requisicao.html
@@ -63,10 +63,19 @@
 
   <hr />
 
-  <div id="items-container">
+  <section id="notafiscal-sessao">
+   <div class="notafiscal-head-box">
+    <p class="notafiscal-head-text">NOTAS FISCAIS</p>
+   </div>
+   <div id="notafiscal"></div>
+  </section>
+
+  <hr />
+
+  <section id="items-container">
    <p class="item-head">MATERIAIS</p>
    <div id="items"></div>
-  </div>
+  </section>
 
   <hr />
 
