--- a/public/requisicao.html
+++ b/public/requisicao.html
@@ -21,12 +21,6 @@
   </nav>
  </header>
 
- <div id="modal-adicionar-notafiscal">
-  <div id="modal-notafiscal-box">
-  </div>
- </div>
-
-
  <main id="main-conteiner">
   <div id="head">
    <div id="titulo-box">
@@ -71,7 +65,7 @@
   <section id="notafiscal-sessao">
    <div class="notafiscal-head-box">
     <p class="notafiscal-head-text">NOTAS FISCAIS</p>
-    <input type="button" id="notafiscal-adicionar-botao" value="ADICIONAR NF" onclick="modalAdicionarNotaFiscal()" />
+    <input type="button" id="notafiscal-adicionar-botao" value="ADICIONAR NF" />
    </div>
    <div id="notafiscal"></div>
   </section>
