--- a/public/requisicao-adicionar-nota-fiscal.html
+++ b/public/requisicao-adicionar-nota-fiscal.html
@@ -21,6 +21,13 @@
   </nav>
  </header>
 
+ <div class="modal">
+  <div class="modal-conteudo">
+   <p class="modal-titulo">MUDAR FORNECEDOR</p>
+   <div id="modal-lista"></div>
+  </div>
+ </div>
+
  <main id="main-conteiner">
   <div id="head">
    <div id="titulo-box">
@@ -35,10 +42,7 @@
     <p class="fornecedores-head-title">FORNECEDOR</p>
     <input type="button" id="fornecedor-alterar-botao" class="" value="ALTERAR FORNECEDOR" />
    </div>
-   <div class="fornecedor-selecionado-box">
-    <img src="" class="fornecedor-selecionado-imagem" />
-    <p class="fornecedor-selecionado-nome">PEDRO HNERIQUE</p>
-   </div>
+   <div id="fornecedor"></div>
   </section>
 
   <hr />
