--- a/public/requisicao-adicionar-nota-fiscal.html
+++ b/public/requisicao-adicionar-nota-fiscal.html
@@ -21,7 +21,7 @@
   </nav>
  </header>
 
- <div class="modal">
+ <div id="modal">
   <div class="modal-conteudo">
    <p class="modal-titulo">MUDAR FORNECEDOR</p>
    <div id="modal-lista"></div>
