--- a/public/requisicao-adicionar-nota-fiscal.html
+++ b/public/requisicao-adicionar-nota-fiscal.html
@@ -20,6 +20,8 @@
    <div class="menu-item" onclick="()=> null"><img src="" alt="">Contas Contabéis</div>
   </nav>
  </header>
+ 
+ <div id="notificador"></div>
 
  <div id="modal" class="modal-esconder">
   <div class="modal-conteudo">
